# embedded-face-detector-system

./: .gitignore  README.md
classifiers/strong/: README.md  classifier_0.txt  classifier_1.txt  classifier_2.txt  classifier_4.txt  classifier_6.txt
classifiers/weak/: README.md
doc/: dataset-partition.txt
features/: README.md  feature_00.txt
raspi-package/: README.md
raspi-package/test/: runme  runme_generic
raspi-package/test/classifiers/: classifier_4.txt
raspi-package/test/images/: 0001.txt  0002.txt
raspi-package/util/: README.md
scripts/: .__afsE3E466915  README.md  clearWeakClassifiers.sh  generateRandomFeatures.sh  makeDatasetPartitionFile.sh  makeRandomFeature.sh  makeStrongClassifier.sh  setupData.sh
src/: CMakeLists.txt  debugme  imageSubwindow.h  makeme
src/actors/: classifier.cpp  classifier.h  file_write_results.cpp  file_write_results.h  imageSubwindow.h  integrateImage.cpp  integrateImage.h  training.cpp  training.h  txt_img_read.cpp  txt_img_read.h  txt_img_write.cpp  txt_img_write.h  weakClassifier.cpp  weakClassifier.h
src/graph/: efds_graph.cpp  efds_graph.h
src/utils/: FeatureType.h  ImageSubwindow.h  WeakClassifier.cpp  WeakClassifier.h  imageSubwindow.h  threshold_update.cpp  threshold_update.h  weakClassifier.cpp  weakClassifier.h  weightupdate.cpp  weightupdate.h
test/: README.md
test/test01/: README.txt  debug  diagnostics.txt  makeme  runme  runme_generic  test-desc.txt
test/test01/classifiers/: classifier_0.txt
test/test02/: diagnostics.txt  results.txt  runme  test-desc.txt
test/test03/: classifierOutput.txt  diagnostics.txt  makeme  results.txt  runme  runme_generic  runme_train  test-desc.txt
test/test04/: correct-faces.txt  correct-nonfaces.txt  debug  expected-output.txt  faceOutput.txt  nonfaceOutput.txt  results-face.txt  results-nonface.txt  runme  runme_generic  runme_test  runme_train  test-desc.txt
test/util/: CMakeLists.txt  efds_graph_driver.cpp  makeme
train/: README.md  demo  results.txt  runme  runme_generic  runme_train
train/util/: CMakeLists.txt  debugme  efds_train.cpp
