CMAKE_MINIMUM_REQUIRED(VERSION 2.8 FATAL_ERROR)

PROJECT(EmbeddedFaceDetectorSystem)

SET(CMAKE_CXX_STANDARD 14)

SET(CMAKE_EXPORT_COMPILE_COMMANDS on)


INCLUDE_DIRECTORIES(
        $ENV{UXWELTERC}/src/gems/actors/basic
        $ENV{UXWELTERC}/src/gems/actors/common
        $ENV{UXWELTERC}/src/gems/edges
        $ENV{UXWELTERC}/src/tools/runtime
        $ENV{UXWELTERC}/src/tools/graph

        $ENV{UXWELTER}/lang/cpp/src/gems/actors/common
        $ENV{UXWELTER}/lang/cpp/src/gems/actors/basic
        $ENV{UXWELTER}/lang/cpp/src/tools/graph
        $ENV{UXWELTER}/lang/cpp/src/tools/runtime
        $ENV{UXWELTER}/lang/cpp/src/apps/basic
        ${PROJECT_SOURCE_DIR}/../src/graph
		${PROJECT_SOURCE_DIR}/../src/actors
		${PROJECT_SOURCE_DIR}/../src/utils
)

LINK_DIRECTORIES(
        $ENV{WELTERGEN}
        $ENV{UXTMP}
)

ADD_EXECUTABLE(
        efds_graph_driver.exe
        efds_graph_driver.cpp
)

TARGET_LINK_LIBRARIES(
        efds_graph_driver.exe
		efds_src 
		${OpenCV_LIBS}
        welt_c_edges
        welt_c_runtime
        welt_cpp_actors_basic
        welt_cpp_actor
        welt_cpp_actors_image
        welt_cpp_runtime
        welt_cpp_utils
        welt_cpp_graph
)

INSTALL(TARGETS efds_graph_driver.exe DESTINATION
        ${PROJECT_SOURCE_DIR})

